--- a/source/_posts/5月上半月記事.md
+++ b/source/_posts/5月上半月記事.md
@@ -7,7 +7,9 @@ tags:
 ---
 上班時間： 8:30-22:30
 要記得報加班！
-車資：高鐵*2+去計程車(收據255) +回程(叫uber)
+<!--more-->車資：高鐵*2+去計程車(收據255) +回程(叫uber)
 
 跟JJ報告6/1場撤+住宿>>>報加班
 ![6/1的住宿](https://firebasestorage.googleapis.com/v0/b/hexo-img.appspot.com/o/S__72679430.jpg?alt=media&token=8b87caae-6fe6-41bb-95f1-096a03e34c33)
+
+
